# cookiecutter-python-docker

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Makefile  docker-compose.yaml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/containers/python/: Dockerfile
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/: .coveragerc  main.py  pylintrc.txt  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/tests/: conftest.py  test_example.py
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/tests/features/{{cookiecutter.module}}/: example.feature
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/tests/{{cookiecutter.module}}/: test_example.py
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/{{cookiecutter.module}}/: example.py
{{cookiecutter.project_name}}/{{cookiecutter.workdir}}/{{cookiecutter.project_name}}/: example.py
